# MPI_programming

./: CMakeLists.txt  main  main.c
MPI_get_status/: MPI_get_status.c
collective_comm/: collective_communication.c
exam_q/: exam21_q2.c
mix/: fosterMethodology.c
mpi_scan/: mpi_scan.c
mutual_exclusion_using_array/: meua.c
pi/: pi.c
serial_program/: serial.c
week4/all_gather/: all_gather.c
week4/all_reduce/: all_reduce.c
week4/barrier/: barrier.c
week4/broad_cast/: Broad_cast.c
week4/collective_comm/: collective_communication.c
week4/mpi_gather/: gather.c
week4/mpi_reduce/: reduce.c
week4/mpi_scatter/: scatter.c
week4/non_blocking_communication/: main  non_blo_comm.c
week4/non_blocking_communication/from_lab4/: communication.c  main
week4/serial_program/: serial.c
work_distribution/: distribution.c
